--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,9 @@
 github: mathewlewallen
-buy_me_a_coffee: mathewlewallen
+patreon: MathewLewallen
+open_collective: # Replace with a single Open Collective username
+community_bridge: mathewlewallen
 liberapay: mathewlewallen
+lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
+buy_me_a_coffee: mathewlewallen
+thanks_dev: u/gh/mathewlewallen
+custom: "https://www.linkedin.com/company/opencloudmap/"
