--- a/.github/workflows/build-category.yml
+++ b/.github/workflows/build-category.yml
@@ -27,15 +27,29 @@ jobs:
           node-version: '22'
 
       - name: Run code orangization script
+        id: organize
         run: node organize.js
+        
+      - name: Check organize.js success
+        if: steps.organize.outcome != 'success'
+        run: |
+          echo "organize.js failed!"
+          exit 1
 
       - name: Run category generation script
+        id: index
         run: node index.js
+        
+      - name: Check index.js success
+        if: steps.index.outcome != 'success'
+        run: |
+          echo "index.js failed!"
+          exit 1
 
       - name: Commit and push if category.md changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add category.md
-          git diff --cached --quiet || git commit -m "chore: regenerate category.md"
+          git add category.md README.md
+          git diff --cached --quiet || git commit -m "chore: regenerate category.md and README.md"
           git push
