--- a/.github/workflows/build-category.yml
+++ b/.github/workflows/build-category.yml
@@ -8,8 +8,8 @@ on:
   push:
     paths:
       - 'README.md'
-      - 'index.js'
-      - 'organize.js'
+      - 'actions/index.js'
+      - 'actions/organize.js'
       - '_partials/**'
 
 jobs:
@@ -27,15 +27,29 @@ jobs:
           node-version: '22'
 
       - name: Run code orangization script
-        run: node organize.js
+        id: organize
+        run: node actions/organize.js
+        
+      - name: Check organize.js success
+        if: steps.organize.outcome != 'success'
+        run: |
+          echo "organize.js failed!"
+          exit 1
 
       - name: Run category generation script
-        run: node index.js
+        id: index
+        run: node actions/index.js
+        
+      - name: Check index.js success
+        if: steps.index.outcome != 'success'
+        run: |
+          echo "index.js failed!"
+          exit 1
 
       - name: Commit and push if category.md changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add category.md
-          git diff --cached --quiet || git commit -m "chore: regenerate category.md"
+          git add category.md README.md
+          git diff --cached --quiet || git commit -m "chore: regenerate category.md and README.md"
           git push
